depends_compile_tests/tests/fail/derive/graph/empty.stderr
error: A Graphviz model must have at least 2 vertices.
 --> tests/fail/derive/graph/empty.rs:5:10
  |
5 | #[derive(Graph)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Graph` (in Nightly builds, run with -Z macro-backtrace for more info)
